syntax = "proto3";

option go_package = "github.com/lieroz/dips-coursework-twitter/tweets_service;protos";

package tweets;

enum Type {
  Tweet = 0;
  Retweet = 1;
}

message Tweet {
  Type type = 1;
  int64 id = 2;
  int64 original_tweet_id = 3;
  string creator = 4;
  string text = 5;
  int64 creation_timestamp = 6;
  repeated int64 retweets = 7;
}

message EmptyReply {}

message CreateTweetRequest {
  Type type = 1;
  int64 original_tweet_id = 2;
  string creator = 3;
  string retweeter = 4;
  string text = 5;
}

message GetTweetsRequest {
  repeated int64 tweets = 1;
}

message GetTweetsReply {
  oneof reply {
    Tweet tweet = 1;
    bool error = 2;
  }
}

message EditTweetRequest {
  int64 id = 1;
  string text = 2;
}

message DeleteTweetsRequest {
  repeated int64 id = 1;
}

service Tweets {
  rpc CreateTweet(CreateTweetRequest) returns (EmptyReply);
  rpc GetTweets(GetTweetsRequest) returns (stream GetTweetsReply);
  rpc EditTweet(EditTweetRequest) returns (EmptyReply);
  rpc DeleteTweet(DeleteTweetsRequest) returns (EmptyReply);
}
